Sun Oct  9 23:05:53 2016  Prathamesh Sonpatki  <csonpatki@gmail.com>

	* array.c, class.c: Fixed documentation where Fixnum was referred
	  directly to use Integer, as Fixnum and Bignum are now unified
	  into Integer and direct usage is deprecated.  [Fix GH-1459]

Sun Oct  9 11:37:19 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (VM_ASSERT): stringify expr here before expansion in
	  RUBY_ASSERT_WHEN.

Sat Oct  8 10:54:22 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/-test-/memory_status/memory_status.c (read_status): use
	  Win32 GetProcessMemoryInfo API.

	* ext/-test-/memory_status/memory_status.c: get memory sizes by
	  mach task_info system call.

Sat Oct  8 09:06:55 2016  Aurelien Jacobs  <aurel@gnuage.org>

	* lib/logger.rb (Logger::Period#next_rotate_time): fix monthly log
	  rotate when DST is applied during a month of 31 days.
	  [Fix GH-1458]

Fri Oct  7 20:21:39 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_prof_setup_new_record): fix the condition to get
	  rusage.

	* gc.c (gc_profile_dump_major_reason): remove undefined flags.

Fri Oct  7 19:18:33 2016  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/*.c, ext/win32ole/win32ole.h: use RB_INT2FIX instead of
	  INT2FIX, and so on.

Fri Oct  7 14:18:40 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* basictest/test.rb: Adjust spaces in class declarations
	  with inheritance. [fix GH-1227] Patch by @adrfer
	* lib/irb/*: ditto.
	* lib/prime.rb: ditto.
	* lib/shell/builtin-command.rb: ditto.
	* object.c: ditto.
	* sample/*.rb: ditto.
	* test/-ext-/method/test_arity.rb: ditto.

Thu Oct  6 17:29:44 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_require_safe): SyntaxError created by the parser just
	  has the message and needs to set up the backtrace.
	  [ruby-core:77491] [Bug #12811]

	* load.c (rb_load_internal0): load/require is not the main
	  script.

Thu Oct  6 13:35:15 2016  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
