@@ -1,3 +1,8 @@
+Mon Oct 10 12:37:06 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (prep_io): reduce isatty call (and its system call) on
+	  Cygwin.
+
 Sun Oct  9 23:05:53 2016  Prathamesh Sonpatki  <csonpatki@gmail.com>
 
 	* array.c, class.c: Fixed documentation where Fixnum was referred
